BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/CRM_PoliticheCreditizie__c.object-meta.xml
<CustomObject>
    <label>Politiche Creditizie</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Politiche Creditizie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Politiche Creditizie</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>