BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_AccountId__c.field-meta.xml
<CustomField>
    <fullName>CRM_AccountId__c</fullName>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Politiche Creditizie</relationshipLabel>
    <relationshipName>CRM_PoliticheCreditizie</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>