BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_CodiceNACE__c.field-meta.xml
<CustomField>
    <fullName>CRM_CodiceNACE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice NACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>