BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_CodiceStrategia__c.field-meta.xml
<CustomField>
    <fullName>CRM_CodiceStrategia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Strategia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>