BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_CodiceStrategiaOLD__c.field-meta.xml
<CustomField>
    <fullName>CRM_CodiceStrategiaOLD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Strategia OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>