BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_DescrizioneATECO_3dig__c.field-meta.xml
<CustomField>
    <fullName>CRM_DescrizioneATECO_3dig__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione ATECO 3 dig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>