BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_DescrizioneNACE__c.field-meta.xml
<CustomField>
    <fullName>CRM_DescrizioneNACE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione NACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>