BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_DescrizioneNACEBPER__c.field-meta.xml
<CustomField>
    <fullName>CRM_DescrizioneNACEBPER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione NACE BPER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>