BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_ESGCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_ESGCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>