BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_NDGGroup__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDGGroup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NDG Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>