BPER/DEVF/force-app/main/default/objects/CRM_PoliticheCreditizie__c/fields/CRM_SensitiveSector__c.field-meta.xml
<CustomField>
    <fullName>CRM_SensitiveSector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SensitiveSector</label>
    <type>Checkbox</type>
</CustomField>